# rfid_occupancy_tracker

./: Pipfile  README.md  pyproject.toml  requirements.txt
rfid_tracker/: app.py  models.py
